# legal-vec

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pyproject.toml
infra/db/: quadrant.yaml
src/legal_vec/: __init__.py  gen.py  types.py
src/legal_vec/data/: download.py
